# DesktopPetOverlay

./: .eslintignore  .gitignore  AGENTS.md  CMakeLists.txt  forge.config.ts  index.html  package-lock.json  package.json
code/: CMakeLists.txt
code/config/: forge.config.ts
code/scripts/: extract-main-cat-emotions.ps1  generate-8frame-json.mjs  patch-packaged-exe-icon.mjs  sync-icon.mjs
code/src/: Renderer.cpp  activityExp.ts  index.css  main.ts  preload.ts  renderer.ts
docs/: CHANGE_LOG.md  PC 활동 EXP 정책.md  README.md  게임 요구사항 문서.md  릴리즈 준비 결과.md  스킬 사용 가이드.md  제품 아이디어 소개 영상 대본.md  캐릭터 디자인 전략.md  프로젝트 아이디어 소개.md
docs/design/: WindowPet 레퍼런스 분석.md  growth-stage-emotion-prompts.md  캐릭터 디자인 전략.md  코드 기반 breathing 아이디어.md
docs/guides/: DesktopPetOverlay 사용 가이드.md  OverlayBreathingPreview 실행 가이드.md  개발 환경 구성.md  스킬 사용 가이드.md
docs/policies/: PC 활동 EXP 정책.md
docs/release/: 릴리즈 준비 결과.md
docs/specs/: DesktopPetOverlay-실구현-기능-기준서.md
scripts/: patch-packaged-exe-icon.mjs  sync-icon.mjs
skills/desktop-pet-dev/: SKILL.md
skills/desktop-pet-dev/agents/: openai.yaml
skills/overlay-window-spec/: SKILL.md
skills/pc-activity-exp-policy/: SKILL.md
skills/pet-balance-simulator/: SKILL.md
skills/release-packaging-windows/: SKILL.md
skills/save-migration-guard/: SKILL.md
source/pet_sprites/: main_cat.json  main_cat_8.generated.json
source/save-fixtures/: latest-schema-v2.json  legacy-schema-v1.json
src/: BreathingMotion.h  Main.cpp  Renderer.h  activityExp.ts  index.css  main.ts  petState.ts  preload.ts  renderer.ts
(+18 files in other folders)
